--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "angular2-moment": "1.0.0-beta.1",
     "bcrypt": "^0.8.7",
     "es6-shim": "0.35.1",
+    "lodash": "^4.16.6",
     "meteor-node-stubs": "0.2.3",
-    "meteor-rxjs": "0.2.3",
+    "meteor-rxjs": "^0.2.3",
     "reflect-metadata": "0.1.8",
-    "rxjs": "5.0.0-beta.12",
+    "rxjs": "^5.0.0-beta.12",
     "zone.js": "0.6.21"
   },
   "devDependencies": {
@@ -29,6 +30,7 @@
     "validate-commit-msg": "2.8.0"
   },
   "scripts": {
-    "start": "meteor --settings settings.json"
+    "start": "meteor --settings settings.json",
+    "lint": "tslint -c tslint.json ./"
   }
 }
